# orivix

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  sonar.yml
backend/: conftest.py  manage.py
backend/config/: urls.py
backend/config/settings/: base.py
backend/domains/accounts/: __init__.py  apps.py  enums.py  permissions.py  repositories.py  serializers.py  services.py  tokens.py  urls.py  views.py
backend/domains/accounts/migrations/: 0001_initial.py
backend/domains/accounts/models/: user.py
backend/domains/accounts/tests/: factories.py  test_admin.py  test_services.py  test_views.py
backend/domains/tenants/: __init__.py  apps.py  serializers.py  services.py  urls.py  views.py
backend/domains/tenants/migrations/: 0001_initial.py
backend/domains/tenants/models/: __init__.py  domain.py  tenant.py
backend/domains/tenants/tests/: test_admin.py
backend/shared/: exceptions.py  models.py  utils.py
bruno/: README.md
bruno/accounts/: bruno.json
bruno/accounts/admin/: create-advisor.bru  create-tenant.bru  folder.bru  list-advisors.bru  list-tenants.bru  toggle-advisor.bru
bruno/accounts/auth/: change-password.bru  forgot-password.bru  login.bru  refresh.bru  reset-password.bru
bruno/accounts/environments/: local.bru
docs/: architecture.md  data-model.md  requirements.md  roadmap.md
docs/adr/: 001-ddd-architecture.md  002-uuid-v7.md  003-multi-tenancy-schema.md
docs/diagrams/: class-diagram.puml
